--- a/Dr. Semmelweis and the Discovery of Handwashing/notebook.ipynb
+++ b/Dr. Semmelweis and the Discovery of Handwashing/notebook.ipynb
@@ -695,7 +695,7 @@
    "outputs": [],
    "source": [
     "# The data Semmelweis collected points to that:\n",
-    "doctors_should_wash_their_hands = True
+    "doctors_should_wash_their_hands = True"
    ]
   }
  ],
