--- a/Dr. Semmelweis and the Discovery of Handwashing/notebook.ipynb
+++ b/Dr. Semmelweis and the Discovery of Handwashing/notebook.ipynb
@@ -17,7 +17,7 @@
    },
    "source": [
     "## 1. Meet Dr. Ignaz Semmelweis\n",
-    "<p><img style=\"float: left;margin:5px 20px 5px 1px\" src=\"https://assets.datacamp.com/production/project_20/img/ignaz_semmelweis_1860.jpeg\"></p>\n",
+    "<p><img style=\"float: left;margin:5px 20px 5px 1px\" src=\"https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Ff%2Ff8%2FIgnaz_Semmelweis_1860.jpg%2F225px-Ignaz_Semmelweis_1860.jpg&imgrefurl=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FIgnaz_Semmelweis&docid=wiUiYcKcnqG9eM&tbnid=AoGMACDEEhO9VM%3A&vet=10ahUKEwj85Om69_zjAhUVOSsKHWMiAfUQMwhLKAAwAA..i&w=225&h=304&bih=625&biw=1366&q=dr%20semmelweis&ved=0ahUKEwj85Om69_zjAhUVOSsKHWMiAfUQMwhLKAAwAA&iact=mrc&uact=8"></p>\n",
     "<!--\n",
     "<img style=\"float: left;margin:5px 20px 5px 1px\" src=\"https://assets.datacamp.com/production/project_20/datasets/ignaz_semmelweis_1860.jpeg\">\n",
     "-->\n",
